# rusty-cli

./: Cargo.toml  README.md
.github/workflows/: publish_crate.yml
docs/: FileReader.md  Inputs.md  Introduction.md
docs/CommandHandler/: README.md
docs/Introduction/: README.md
examples/: ConfirmInput.rs  confirm_input.rs  default_no_argument_message.rs  flag_values.rs  flags.rs  multi_select_input.rs  password_input.rs  pong_custom_handler.rs  pong_default.rs  project_meta_data.rs  select_input.rs  text_input.rs  vim_input.rs
src/: command_handler.rs  file_reader.rs  lib.rs  meta_data.rs  noop.rs  option_resolver.rs  runner.rs
src/commands/: command.rs  command_trait.rs  help_command.rs  mod.rs
src/flags/: flag.rs  flag_parser.rs  mod.rs
src/inputs/: confirm_input.rs  mod.rs  multi_select_input.rs  password_input.rs  select_input.rs  text_input.rs  vim_input.rs
